# ternary

./: Cargo.toml  index.html  index.js  package-lock.json  package.json
src/: lattice.rs  lib.rs
