[package]
name = "ternary"
version = "0.1.0"
authors = ["turbofishcrow <serotoceprafen@gmail.com>"]
edition = "2024"
rust-version = "1.88.0"
license = "MIT OR Apache-2.0"
include = ["/src"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm = ["dep:wasm-bindgen", "dep:serde-wasm-bindgen", "dep:web-sys", "dep:console_error_panic_hook"]

[dependencies]
stacker = "0.1.23"

itertools = "0.14.0"

num-traits = "0.2.19"
num-integer = "0.1.46"
num-rational = "0.4.2"
num-bigint = "0.4.5"

thiserror = "2.0.18"

serde = { version = "1.0.208", features = ["derive"] }

# WASM-specific dependencies (optional)
wasm-bindgen = { version = "0.2.106", optional = true }
serde-wasm-bindgen = { version = "0.6.5", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
web-sys = { version = "0.3", features = ['Document', 'Element', 'HtmlElement', 'Node', 'Window'], optional = true }
wasm-bindgen-test = "0.3.34"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
criterion = "0.8.1"

[[bench]]
name = "bench"
harness = false

[profile.release]
opt-level = 'z'  # Optimize for size, not speed
lto = true       # Enable Link Time Optimization
codegen-units = 1 # Helps LTO perform better (can increase compile time)
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os", "--all-features"]
